--- a/_config.yml
+++ b/_config.yml
@@ -102,8 +102,8 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
   orcid            : "http://orcid.org/0000-0003-0506-8357"
+  linkedin         : "gongjie-z-25538216a"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
