--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gongjie Zhang<br> （张功杰）"
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   bio              : "Computer Vision Researcher<br>Ph.D. Candidate @ Nanyang Technological Univeristy"
   location         : "Singapore"
   employer         :
