--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Computer Vision Researcher<br>Ph.D. Candidate @ Nanyang Technological Univeristy"
   location         : "Singapore"
-  employer         :
+  employer         : "Nanyang Technological University"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=sRBTPp4AAAAJ&hl=en"
   email            :
