--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Gongjie Zhang<br> （张功杰）"
+  name             : "Gongjie Zhang (张功杰)"
   avatar           : "Gongjie_Profile.png"
-  bio              : "Computer Vision Researcher<br>Ph.D. Candidate @ Nanyang Technological Univeristy"
+  bio              : "Computer Vision Researcher"
   location         : "Singapore"
   employer         : "Nanyang Technological University"
   pubmed           : 
