--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,19 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Home"
+    url: /
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Research"
+    url: /research/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Publication"
+    url: /publication/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Patent"
+    url: /patent/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Award"
+    url: /award/
     
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Academic Service"
+    url: /service/
