--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Gongjie Zhang<br>(张功杰)"
+  name             : "Gongjie Zhang (张功杰)"
   avatar           : "/Gongjie_Profile.png"
   bio              : "Computer Vision Researcher"
   location         : "Singapore"
