--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gongjie Zhang (张功杰)"
-  avatar           : "/Gongjie_Profile.png"
+  avatar           : "Gongjie_Profile.png"
   bio              : "Computer Vision Researcher"
   location         : "Singapore"
   employer         : "Nanyang Technological University"
