--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Gongjie Zhang (张功杰)"
-  avatar           : "Gongjie_Profile.png"
+  name             : "Gongjie Zhang <br>（张功杰）"
+  avatar           : "Gongjie_Profile.jpg"
   bio              : "Computer Vision Researcher"
   location         : "Singapore"
   employer         : "Nanyang Technological University"
