--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,8 @@ author:
   avatar           : "Gongjie_Profile.jpg"
   bio              : "Computer Vision Researcher"
   location         : "Singapore"
-  university       : "Nanyang Technological University"
-  # employer         : "Nanyang Technological University"
+  company          : "Nanyang Technological University"
+  employer         : "Nanyang Technological University"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=sRBTPp4AAAAJ&hl=en"
   email            :
