--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Gongjie_Profile.jpg"
   bio              : "Computer Vision Researcher"
   location         : "Singapore"
-  employer         : "Nanyang Technological University"
+  employer         : "NTU"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=sRBTPp4AAAAJ&hl=en"
   email            : "GongjieZhang@ntu.edu.sg"
