--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gongjie Zhang 张功杰"
-  avatar           : "Gongjie_Profile.jpg"
+  avatar           : "Gongjie_Bio_Photo.jpg"
   bio              : "Computer Vision Researcher"
   location         : "Singapore"
   employer         : "NTU"
