--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "gongjie-z-25538216a"
+  linkedin         : "gongjiiezhang"
   orcid            : "http://orcid.org/0000-0003-0506-8357"
   pinterest        :
   soundcloud       :
