update in 16th Jan 2024

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Gongjie Zhang 张功杰"
   avatar           : "Gongjie_Bio_Photo.jpg"
-  bio              : "Computer Vision Research Scientist"
+  bio              : "AI Research Scientist"
   location         : "Black Sesame Tech."
   employer         : "Singapore"
   pubmed           : 
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "gongjiiezhang"
+  linkedin         : "gongjiezhang"
   orcid            : "http://orcid.org/0000-0003-0506-8357"
   pinterest        :
   soundcloud       :
