update role change -- DAMO Academy

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Gongjie Zhang 张功杰"
   avatar           : "Gongjie_Bio_Photo.jpg"
   bio              : "AI Research Scientist"
-  location         : "Black Sesame Tech."
+  location         : "Alibaba DAMO Academy"
   employer         : "Singapore"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=sRBTPp4AAAAJ&hl=en"
