--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gongjie Zhang 张功杰"
-  avatar           : "Gongjie_Bio_Photo.jpg"
+  avatar           : "gongjie_photo_202406.jpg"
   bio              : "AI Research Scientist"
   location         : "Alibaba DAMO Academy"
   employer         : "Singapore"
